--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import url('https://unpkg.com/tachyons@4.12.0/css/tachyons.min.css');
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +11,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.App {
+  padding-top: 60px;
 }
 
 code {
